# opengl_concepts

./: CMakeLists.txt  main.cpp
log/: log.cpp  log.h
old/: main.cpp.old1
shaders/: test.frag  test.vert
utils/: shaders.cpp  shaders.h
